// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidebarItem collapsible menu is expanded when one of the children is selected 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="Container-flex Container-column Sidebar-root Sidebar-light"
    >
      <div
        class="Sidebar-spacer"
      />
      <ul
        class="MuiList-root Menu-root SidebarMenu-root"
        role="menu"
        tabindex="-1"
      >
        <div
          class="Container-leftsmallMargin Container-rightsmallMargin"
        >
          <div
            class="MuiPaper-root MuiAccordion-root makeStyles-root makeStyles-bordersNone Mui-expanded MuiAccordion-rounded MuiPaper-elevation0 MuiPaper-rounded"
          >
            <div
              aria-disabled="false"
              aria-expanded="true"
              class="MuiButtonBase-root MuiAccordionSummary-root WithStyles(ForwardRef(AccordionSummary))-root makeStyles-summary PicassoSidebarItem-summary Mui-expanded"
              role="button"
              tabindex="0"
            >
              <div
                class="MuiAccordionSummary-content WithStyles(ForwardRef(AccordionSummary))-content makeStyles-content PicassoSidebarItem-content Mui-expanded"
              >
                <li
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-nonSelectable MenuItem-light PicassoSidebarItem-root PicassoSidebarItem-noWrap PicassoSidebarItem-roundedBorder PicassoSidebarItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                  role="menuitem"
                  tabindex="0"
                >
                  <div
                    class="Container-flex Container-column MenuItem-content"
                  >
                    <div
                      class="Container-centerAlignItems Container-flex"
                    >
                      <div
                        class="Container-centerAlignItems Container-flex Container-inline PicassoSidebarItem-noWrap"
                      >
                        <div
                          class="Container-centerAlignItems Container-flex PicassoSidebarItem-label PicassoSidebarItem-noWrap"
                        >
                          <p
                            class="MuiTypography-root Typography-bodyMedium Typography-inherit MuiTypography-body1 MuiTypography-noWrap"
                          >
                            Test item
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
                <svg
                  class="SvgArrowDownMinor16-root PicassoSidebarItem-expandIcon PicassoSidebarItem-lightExpandIcon makeStyles-expandIcon makeStyles-expandIconExpanded"
                  style="min-width: 16px; min-height: 16px;"
                  viewBox="0 0 16 16"
                >
                  <path
                    d="M11.997 5.29l.707.707-4 4-.707.707-.707-.707-4-4 .707-.707 4 4 4-4z"
                  />
                </svg>
              </div>
            </div>
            <div
              class="MuiCollapse-container MuiCollapse-entered"
              style="min-height: 0px;"
            >
              <div
                class="MuiCollapse-wrapper"
              >
                <div
                  class="MuiCollapse-wrapperInner"
                >
                  <div
                    role="region"
                  >
                    <div
                      class="MuiAccordionDetails-root AccordionDetails-root makeStyles-details PicassoSidebarItem-details"
                    >
                      <ul
                        class="MuiList-root Menu-root SidebarMenu-root"
                        role="menu"
                        tabindex="-1"
                      >
                        <div
                          class="Container-leftsmallMargin Container-rightsmallMargin"
                        >
                          <li
                            aria-disabled="false"
                            class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-nonSelectable MenuItem-light PicassoSidebarItem-root PicassoSidebarItem-noWrap PicassoSidebarItem-roundedBorder PicassoSidebarItem-light PicassoSidebarItem-selected Mui-selected MenuItem-selected MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button Mui-selected"
                            role="menuitem"
                            tabindex="0"
                          >
                            <div
                              class="Container-flex Container-column MenuItem-content"
                            >
                              <div
                                class="Container-centerAlignItems Container-flex"
                              >
                                <div
                                  class="Container-centerAlignItems Container-flex Container-inline PicassoSidebarItem-noWrap"
                                >
                                  <div
                                    class="Container-centerAlignItems Container-flex PicassoSidebarItem-label PicassoSidebarItem-noWrap"
                                  >
                                    <p
                                      class="MuiTypography-root Typography-bodyMedium Typography-inherit MuiTypography-body1 MuiTypography-noWrap"
                                    >
                                      Menu item
                                    </p>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </li>
                        </div>
                      </ul>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`SidebarItem default render 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="Container-leftsmallMargin Container-rightsmallMargin"
    >
      <li
        aria-disabled="false"
        class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-nonSelectable MenuItem-light PicassoSidebarItem-root PicassoSidebarItem-noWrap PicassoSidebarItem-roundedBorder MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
        role="menuitem"
        tabindex="-1"
      >
        <div
          class="Container-flex Container-column MenuItem-content"
        >
          <div
            class="Container-centerAlignItems Container-flex"
          >
            <div
              class="Container-centerAlignItems Container-flex Container-inline PicassoSidebarItem-noWrap"
            >
              <div
                class="Container-centerAlignItems Container-flex PicassoSidebarItem-label PicassoSidebarItem-noWrap"
              >
                <p
                  class="MuiTypography-root Typography-bodyMedium Typography-inherit MuiTypography-body1 MuiTypography-noWrap"
                >
                  Test item
                </p>
              </div>
            </div>
          </div>
        </div>
      </li>
    </div>
  </div>
</div>
`;

exports[`SidebarItem don't use accordion for non-collapsible with menu 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="Container-leftsmallMargin Container-rightsmallMargin"
    >
      <li
        aria-disabled="false"
        class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-nonSelectable MenuItem-light PicassoSidebarItem-root PicassoSidebarItem-noWrap PicassoSidebarItem-roundedBorder MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
        role="menuitem"
        tabindex="-1"
      >
        <div
          class="Container-flex Container-column MenuItem-content"
        >
          <div
            class="Container-centerAlignItems Container-flex"
          >
            <div
              class="Container-centerAlignItems Container-flex Container-inline PicassoSidebarItem-noWrap"
            >
              <svg
                class="SvgCandidates16-root"
                style="min-width: 16px; min-height: 16px;"
                viewBox="0 0 16 16"
              >
                <path
                  d="M16 11H7v4l-7-4V1h16v10zm-1-9H1v8.42l5 2.857V10h9V2z"
                />
              </svg>
              <div
                class="Container-centerAlignItems Container-flex PicassoSidebarItem-label PicassoSidebarItem-noWrap PicassoSidebarItem-withIcon"
              >
                <p
                  class="MuiTypography-root Typography-bodyMedium Typography-inherit MuiTypography-body1 MuiTypography-noWrap"
                >
                  Test item
                </p>
              </div>
            </div>
          </div>
        </div>
      </li>
      <div
        class="PicassoSidebarItem-nonCollapsibleMenu"
      >
        <ul
          class="MuiList-root Menu-root SidebarMenu-root"
          role="menu"
          tabindex="-1"
        >
          <div
            class="Container-leftsmallMargin Container-rightsmallMargin"
          >
            <li
              aria-disabled="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-nonSelectable MenuItem-light PicassoSidebarItem-root PicassoSidebarItem-noWrap PicassoSidebarItem-roundedBorder MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              role="menuitem"
              tabindex="0"
            >
              <div
                class="Container-flex Container-column MenuItem-content"
              >
                <div
                  class="Container-centerAlignItems Container-flex"
                >
                  <div
                    class="Container-centerAlignItems Container-flex Container-inline PicassoSidebarItem-noWrap"
                  >
                    <div
                      class="Container-centerAlignItems Container-flex PicassoSidebarItem-label PicassoSidebarItem-noWrap"
                    >
                      <p
                        class="MuiTypography-root Typography-bodyMedium Typography-inherit MuiTypography-body1 MuiTypography-noWrap"
                      >
                        Menu item
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </li>
          </div>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`SidebarItem is selected 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="Container-leftsmallMargin Container-rightsmallMargin"
    >
      <li
        aria-disabled="false"
        class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-nonSelectable MenuItem-light PicassoSidebarItem-root PicassoSidebarItem-noWrap PicassoSidebarItem-roundedBorder PicassoSidebarItem-selected Mui-selected MenuItem-selected MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button Mui-selected"
        role="menuitem"
        tabindex="-1"
      >
        <div
          class="Container-flex Container-column MenuItem-content"
        >
          <div
            class="Container-centerAlignItems Container-flex"
          >
            <div
              class="Container-centerAlignItems Container-flex Container-inline PicassoSidebarItem-noWrap"
            >
              <svg
                class="SvgCandidates16-root"
                style="min-width: 16px; min-height: 16px;"
                viewBox="0 0 16 16"
              >
                <path
                  d="M16 11H7v4l-7-4V1h16v10zm-1-9H1v8.42l5 2.857V10h9V2z"
                />
              </svg>
              <div
                class="Container-centerAlignItems Container-flex PicassoSidebarItem-label PicassoSidebarItem-noWrap PicassoSidebarItem-withIcon"
              >
                <p
                  class="MuiTypography-root Typography-bodyMedium Typography-inherit MuiTypography-body1 MuiTypography-noWrap"
                >
                  Test item
                </p>
              </div>
            </div>
          </div>
        </div>
      </li>
    </div>
  </div>
</div>
`;

exports[`SidebarItem use accordion for collapsible with menu 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="Container-leftsmallMargin Container-rightsmallMargin"
    >
      <div
        class="MuiPaper-root MuiAccordion-root makeStyles-root makeStyles-bordersNone MuiAccordion-rounded MuiPaper-elevation0 MuiPaper-rounded"
      >
        <div
          aria-disabled="false"
          aria-expanded="false"
          class="MuiButtonBase-root MuiAccordionSummary-root WithStyles(ForwardRef(AccordionSummary))-root makeStyles-summary PicassoSidebarItem-summary"
          role="button"
          tabindex="0"
        >
          <div
            class="MuiAccordionSummary-content WithStyles(ForwardRef(AccordionSummary))-content makeStyles-content PicassoSidebarItem-content"
          >
            <li
              aria-disabled="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-nonSelectable MenuItem-light PicassoSidebarItem-root PicassoSidebarItem-noWrap PicassoSidebarItem-roundedBorder MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              role="menuitem"
              tabindex="-1"
            >
              <div
                class="Container-flex Container-column MenuItem-content"
              >
                <div
                  class="Container-centerAlignItems Container-flex"
                >
                  <div
                    class="Container-centerAlignItems Container-flex Container-inline PicassoSidebarItem-noWrap"
                  >
                    <svg
                      class="SvgCandidates16-root"
                      style="min-width: 16px; min-height: 16px;"
                      viewBox="0 0 16 16"
                    >
                      <path
                        d="M16 11H7v4l-7-4V1h16v10zm-1-9H1v8.42l5 2.857V10h9V2z"
                      />
                    </svg>
                    <div
                      class="Container-centerAlignItems Container-flex PicassoSidebarItem-label PicassoSidebarItem-noWrap PicassoSidebarItem-withIcon"
                    >
                      <p
                        class="MuiTypography-root Typography-bodyMedium Typography-inherit MuiTypography-body1 MuiTypography-noWrap"
                      >
                        Test item
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </li>
            <svg
              class="SvgArrowDownMinor16-root PicassoSidebarItem-expandIcon makeStyles-expandIcon"
              style="min-width: 16px; min-height: 16px;"
              viewBox="0 0 16 16"
            >
              <path
                d="M11.997 5.29l.707.707-4 4-.707.707-.707-.707-4-4 .707-.707 4 4 4-4z"
              />
            </svg>
          </div>
        </div>
        <div
          class="MuiCollapse-container MuiCollapse-hidden"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner"
            >
              <div
                role="region"
              >
                <div
                  class="MuiAccordionDetails-root AccordionDetails-root makeStyles-details PicassoSidebarItem-details"
                >
                  <ul
                    class="MuiList-root Menu-root SidebarMenu-root"
                    role="menu"
                    tabindex="-1"
                  >
                    <div
                      class="Container-leftsmallMargin Container-rightsmallMargin"
                    >
                      <li
                        aria-disabled="false"
                        class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-nonSelectable MenuItem-light PicassoSidebarItem-root PicassoSidebarItem-noWrap PicassoSidebarItem-roundedBorder MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                        role="menuitem"
                        tabindex="0"
                      >
                        <div
                          class="Container-flex Container-column MenuItem-content"
                        >
                          <div
                            class="Container-centerAlignItems Container-flex"
                          >
                            <div
                              class="Container-centerAlignItems Container-flex Container-inline PicassoSidebarItem-noWrap"
                            >
                              <div
                                class="Container-centerAlignItems Container-flex PicassoSidebarItem-label PicassoSidebarItem-noWrap"
                              >
                                <p
                                  class="MuiTypography-root Typography-bodyMedium Typography-inherit MuiTypography-body1 MuiTypography-noWrap"
                                >
                                  Menu item
                                </p>
                              </div>
                            </div>
                          </div>
                        </div>
                      </li>
                    </div>
                  </ul>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SidebarItem with icon 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="Container-leftsmallMargin Container-rightsmallMargin"
    >
      <li
        aria-disabled="false"
        class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-nonSelectable MenuItem-light PicassoSidebarItem-root PicassoSidebarItem-noWrap PicassoSidebarItem-roundedBorder MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
        role="menuitem"
        tabindex="-1"
      >
        <div
          class="Container-flex Container-column MenuItem-content"
        >
          <div
            class="Container-centerAlignItems Container-flex"
          >
            <div
              class="Container-centerAlignItems Container-flex Container-inline PicassoSidebarItem-noWrap"
            >
              <svg
                class="SvgCandidates16-root"
                style="min-width: 16px; min-height: 16px;"
                viewBox="0 0 16 16"
              >
                <path
                  d="M16 11H7v4l-7-4V1h16v10zm-1-9H1v8.42l5 2.857V10h9V2z"
                />
              </svg>
              <div
                class="Container-centerAlignItems Container-flex PicassoSidebarItem-label PicassoSidebarItem-noWrap PicassoSidebarItem-withIcon"
              >
                <p
                  class="MuiTypography-root Typography-bodyMedium Typography-inherit MuiTypography-body1 MuiTypography-noWrap"
                >
                  Test item
                </p>
              </div>
            </div>
          </div>
        </div>
      </li>
    </div>
  </div>
</div>
`;
